Fix tip z-index issues

--- a/src/main/resources/META-INF/resources/rbs/css/rbs.css
+++ b/src/main/resources/META-INF/resources/rbs/css/rbs.css
@@ -99,16 +99,18 @@ so they're removed from the DOM when they're not
 
 /* the actual tip */
 .tip-container .tip {
+    z-index: 0;
     width: 11em;
     position: absolute;
     padding: 0.3em;
-    box-shadow: 0 0.2em 0.4em rgba(0, 0, 0, .2);
+    box-shadow: 0 0.2em 0.4em rgba(0, 0, 0, 0.2);
     border: 1px solid rgba(0, 0, 0, 0.2);
     border-radius: 0.2em;
     background-color: white;
 }
 
 .tip-container .arrow {
+    z-index: 1;
     position: absolute;
     top: 50%;
     width: 0;
@@ -143,7 +145,7 @@ so they're removed from the DOM when they're not
     left: 100%;
     border-top: 0.5em solid transparent;
     border-bottom: 0.5em solid transparent;
-    border-right: 0.5em solid white;
+    border-right: 0.5em solid rgba(0, 0, 0, 0.2);
 }
 
 /* tip is off to the left */
@@ -156,7 +158,7 @@ so they're removed from the DOM when they're not
     right: 100%;
     border-top: 0.5em solid transparent;
     border-bottom: 0.5em solid transparent;
-    border-left: 0.5em solid white;
+    border-left: 0.5em solid rgba(0, 0, 0, 0.2);
 }
 
 /* this is true for top and bottom tips */
@@ -188,7 +190,7 @@ so they're removed from the DOM when they're not
     display: none;
     border-left: 0.5em solid transparent;
     border-right: 0.5em solid transparent;
-    border-top: 0.5em solid white;
+    border-top: 0.5em solid rgba(0, 0, 0, 0.2);
     bottom: 100%;
 }
 
@@ -203,7 +205,7 @@ so they're removed from the DOM when they're not
     display: none;
     border-left: 0.5em solid transparent;
     border-right: 0.5em solid transparent;
-    border-bottom: 0.5em solid white;
+    border-bottom: 0.5em solid rgba(0, 0, 0, 0.2);
     top: 100%;
 }
 
